# SK-Project

./: .gitignore  CMakeLists.txt  README.md
Classes/: Client.cpp  Client.h  Game.cpp  Game.h  Server.cpp  Server.h  SocketHandler.h
Client/: main_client.cpp
Klient/src/main/: Connection.java  Controller.java  Game.java  Main.java  Player.java
Klient/src/main/java/app/: Controller.java  Game.java  Main.java
Klient/src/main/resources/: scene.fxml
Libs/: wrapper.h
Server/: mainServer.cpp  main_Server.cpp
Serwer/: config.txt
Serwer/Classes/: Client.cpp  Client.h  Game.cpp  Server.cpp
Serwer/Client/: main_client.cpp
Serwer/Server/: main_Server.cpp
Serwer/Utils/: utils.cpp  utils.h
Utils/: utils.cpp  utils.h
